2004-06-22
	* License is now Eiffel Forum v2.
	* New indexing clause format to standardize with the format of GOBO.
	
2004-05-14
	* Refactored ECLI_VALUE hierarchy
	* Introduced sending/getting long data : ECLI_FILE_VALUE and descendants
	* ECLI_STATEMENT.get_row_count is a hook that is called just after a statement has been executed.
	  Descendants can redefine it, for getting multiple row_counts using SQLMoreResults.
	  
2004-05-05
	* Bug fixes: 
		- ECLI_DATA_SOURCES_CURSOR.get_diagnostics Result is not initialized
		- ECLI_STATUS.get_diagnostics : impl_cli_state not renitialized
	* New features:
		- XS_C_STRING : 'wipe_out' added, 'put' fixed.

2003-09-10
	* New class ECLI_STORED_PROCEDURE allowing usage of input, output and input/output parameters
	* New metadata classes : ECLI_PROCEDURES_CURSOR, ECLI_PROCEDURE, ECLI_PROCEDURE_COLUMNS_CURSOR, ECLI_PROCEDURE_COLUMN
	* New classes : ECLI_BINARY, ECLI_VARBINARY, ECLI_LONGVARBINARY
	
2003-07-04
	* ECLI_VALUE.as_* replace now ECLI_VALUE.to_* conversion routines
		Original routines are make obsolete
	* ECLI_VALUE.convertible_as_* replace now ECLI_VALUE.convertible_to* routines
		Original routines are made obsolete
	
2003-05-05
!!!	* ECLI_VALUE.as_string now *replaces* ECLI_VALUE.to_string to ensure .NET compatibility
	* Transaction isolation
		- new class ECLI_TRANSACTION_ISOLATION
		- read/write implemented by ECLI_SESSION.transaction_isolation and ECLI_SESSION.set_transaction_isolation
	* ECLI_TIMESTAMP.decimal_digits is now 0, unless specifically set through ECLI_TIMESTAMP.set_decimal_digits
	* Prepared migration of ECLI to .NET : created support for external values
	  with classes XS_C_*; This prevents using the '$' operator.
	* Query assistant heavily reworked, still in alpha state.
	
2003-03-10
	* ECLI_VALUE descendants implement correct 'copy' and 'is_equal' features.	  
	
2003-02-28
	* 'metadata' cluster provides various cursors on metadata : tables, columns, types, procedures,