@@ -32,7 +32,11 @@ NEW
 		ECLI_BINARY,
 		ECLI_VARBINARY,
 		ECLI_LONGVARBINARY
-
+		ECLI_FILE_VARCHAR,
+		ECLI_FILE_VARBINARY,
+		ECLI_FILE_LONGVARCHAR,
+		ECLI_FILE_LONGVARBINARY
+		
 	Metadata
 		ECLI_COLUMNS_CURSOR, ECLI_COLUMN,
 		ECI_DATA_SOURCES_CURSOR, ECLI_DATA_SOURCE,
