@@ -44,7 +44,9 @@
 		<option if="${GOBO_OS}=windows">
 			<option name="link" value="${ECLI}\src\spec\${GOBO_EIFFEL}\${GOBO_OS}\ecli_${GOBO_CC}.lib"/>
 			<option name="link" value="ODBC32.lib" unless="${GOBO_CC}=bcc"/>
+			<option name="link" value="ODBCCP32.lib" unless="${GOBO_CC}=bcc"/>
 			<option name="link" value="${ECLI_C_BCCDIR}\lib\PSDK\ODBC32.lib" if="${GOBO_CC}=bcc"/>
+			<option name="link" value="${ECLI_C_BCCDIR}\lib\PSDK\ODBCCP32.lib" if="${GOBO_CC}=bcc"/>
 			<option name="link" value="-lodbc32" if="${GOBO_CC}=gcc"/>
 			<option name="linker" value="microsoft" if="${GOBO_EIFFEL}=ve"/>
 		</option>
