@@ -1,3 +1,4 @@
 #include <eif_eiffel.h>
 #include <sql.h>
 #include <sqlext.h>
+#include <odbcinst.h>
